--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-google-maps/api": "^2.20.5",
+    "lucide-react": "^0.471.0",
+    "next": "15.1.4",
     "react": "^19.0.0",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.4"
+    "react-fontawesome": "^1.7.1",
+    "react-icons": "^5.4.0",
+    "react-time-picker": "^7.0.0",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "postcss": "^8",
